@@ -1,11 +1,17 @@
 2006-12-09  Richard Levitte  <richard@levitte.org>
 
+	* tests/netsync_permissions_wildcards/__driver__.lua:
+	Don't forget to get() read-permissions and write-permissions.
+	Also, netsync.start should use the full blown netsync.lua,
+	not the minimal start.
+
+2006-12-09  Richard Levitte  <richard@levitte.org>
+
 	* tests/netsync_permissions_wildcards/__driver__.lua,
 	tests/netsync_permissions_wildcards/read-permissions,
 	tests/netsync_permissions_wildcards/write-permissions,
 	testsuite.lua: Test how well netsync works when read-permissions
 	contains wildcards as part of the pattern.
-	THIS IS REALLY A BUG REPORT
 
 2006-12-08  Richard Levitte  <richard@levitte.org>
 
